# LegacyCraft

./: CMakeLists.txt
.devcontainer/: devcontainer.json
MInecraft.World/: CMakeLists.txt  Class.h  Definitions.h  Exceptions.h  Mth.cpp  Mth.h  Random.cpp  Random.h  stdafx.h
Minecraft.Client/: CMakeLists.txt  stdafx.cpp
Minecraft.Client/Xbox/Network/: extra.h
Minecraft.Common/: BuildVer.h
Minecraft.Common/lce_filesystem/: lce_filesystem.cpp  lce_filesystem.h
cmake/: CommonSources.cmake  CopyAssets.cmake  CopyFileScript.cmake  CopyFolderScript.cmake  Utils.cmake
cmake/sources/: Common.cmake
